deploy/launchpad/overlays/oberon-public/enable-public-access.yaml
apiVersion: apps/v1
kind: Deployment
metadata: {name: public-access-gateway}
spec: {replicas: 2}
